CB-25855 adding n2-highmem-2,n2-highmem-4,n2-highmem-8,n2-highmem-16,n2-highmem-32,n2-highmem-48,n2-highmem-64,n2-highmem-80,n2-highmem-96,n2-highmem-128, ,n4-standard-2,n4-standard-4,n4-standard-8,n4-standard-16,n4-standard-32,n4-standard-48,n4-standard-64,n4-standard-80, ,n4-highmem-2,n4-highmem-4,n4-highmem-8,n4-highmem-16,n4-highmem-32,n4-highmem-48,n4-highmem-64,n4-highmem-80 to google cloud